--- a/circle.yml
+++ b/circle.yml
@@ -9,27 +9,29 @@ experimental:
         - labs
         - development
 
-
 machine:
   java:
-      version: oraclejdk8
+    version: oraclejdk8
   environment:
     # set the adb install timeout to 8 minutes (default is 2 minutes)
     ADB_INSTALL_TIMEOUT: 8
-    JAVA_OPTS: "-Xms512m -Xmx2048m"
-    GRADLE_OPTS: '-Dorg.gradle.jvmargs="-Xmx2048m -XX:+HeapDumpOnOutOfMemoryError"'
+    # set memory limits for java processes because the container has a memory limit of 4G
+    _JAVA_OPTS: "-Xms512m -Xmx1024m -XX:PermSize=512m -XX:MaxPermSize=1024m"
+    GRADLE_OPTS: '-Dorg.gradle.jvmargs="-Xmx1024m -XX:MaxPermSize=1024m -XX:+HeapDumpOnOutOfMemoryError"'
+
 
 dependencies:
   pre:
-    - echo y | android update sdk --no-ui --all --filter tool,extra-android-m2repository,extra-android-support,platform-tools,extra-google-google_play_services,extra-google-m2repository,android-24
+    - echo y | android update sdk --no-ui --all --filter tool,extra-android-m2repository,extra-android-support,extra-google-google_play_services,extra-google-m2repository,android-24
     - echo y | android update sdk --no-ui --all --filter build-tools-24.0.2
 
 test:
   override:
-    # build the project and capture infer input
-    - ./gradlew assemble -PpreDexEnable=false -Pcom.android.build.threadPoolSize=1 -Dorg.gradle.parallel=false -Dorg.gradle.jvmargs="-Xms512m -Xmx512m -XX:MaxPermSize=2048m"
+    # build the project and run static analysis while we wait for the emulator to boot (lint, pmd, findbugs, checkstyle)
+    - ./gradlew assembleDebug -PdisablePreDex
     # run static analysis
-    - ./gradlew checkstyle pmd findbugs lintBigbetworldDebug -PpreDexEnable=false -Pcom.android.build.threadPoolSize=1 -Dorg.gradle.parallel=false -Dorg.gradle.jvmargs="-Xms512m -Xmx512m -XX:MaxPermSize=2048m"
+    - ./gradlew check -PdisablePreDex
+  post:
     # copy the build outputs to artifacts
     - cp -r app/build/outputs $CIRCLE_ARTIFACTS
     - cp -r app/build/reports $CIRCLE_ARTIFACTS
