Add example update() case

--- a/testapp/src/main/AndroidManifest.xml
+++ b/testapp/src/main/AndroidManifest.xml
@@ -8,13 +8,21 @@
             android:label="@string/app_name"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
+        <activity
+                android:name=".activities.SimpleActivity"
+                android:screenOrientation="portrait"/>
+        <activity
+                android:name=".activities.UpdateActivity"
+                android:screenOrientation="portrait"/>
+
     </application>
 
 </manifest>
