--- a/testapp/src/main/AndroidManifest.xml
+++ b/testapp/src/main/AndroidManifest.xml
@@ -23,6 +23,10 @@
                 android:name=".activities.UpdateActivity"
                 android:screenOrientation="portrait"/>
 
+        <activity
+                android:name=".activities.NextPageListenerActivity"
+                android:screenOrientation="portrait"/>
+
     </application>
 
 </manifest>
