Show empty view if adapter is not set

--- a/testapp/src/main/AndroidManifest.xml
+++ b/testapp/src/main/AndroidManifest.xml
@@ -22,6 +22,9 @@
         <activity
                 android:name=".activities.UpdateActivity"
                 android:screenOrientation="portrait"/>
+        <activity
+                android:name=".activities.EmptyViewActivity"
+                android:screenOrientation="portrait"/>
 
     </application>
 
