--- a/testapp/src/main/AndroidManifest.xml
+++ b/testapp/src/main/AndroidManifest.xml
@@ -30,6 +30,10 @@
                 android:name=".activities.NextPageListenerActivity"
                 android:screenOrientation="portrait"/>
 
+        <activity
+                android:name=".activities.GridActivity"
+                android:screenOrientation="portrait"/>
+
     </application>
 
 </manifest>
