New gradle version

--- a/mjolnirrecyclerview/build.gradle
+++ b/mjolnirrecyclerview/build.gradle
@@ -76,8 +76,7 @@ bintray {
             desc = libraryDescription
             websiteUrl = siteUrl
             vcsUrl = gitUrl
-            licenses = ["Apache-" +
-                                ".0"]
+            licenses = ["Apache-2.0"]
             publish = true
             publicDownloadNumbers = true
             dryRun = false
