--- a/build.gradle
+++ b/build.gradle
@@ -3,12 +3,15 @@
 buildscript {
     repositories {
         jcenter()
+        maven { url "https://plugins.gradle.org/m2/" } // needed for gradle-errorprone-plugin
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.0-beta3'
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
+        classpath "net.ltgt.gradle:gradle-errorprone-plugin:0.0.8"
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
