--- a/mjolnirrecyclerview/build.gradle
+++ b/mjolnirrecyclerview/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.library'
 apply from: '../config/quality.gradle'
 apply plugin: 'com.github.dcendents.android-maven'
 apply plugin: 'com.jfrog.bintray'
+apply plugin: 'net.ltgt.errorprone'
 
 android {
     compileSdkVersion 25
