--- a/build.gradle
+++ b/build.gradle
@@ -6,8 +6,7 @@ buildscript {
         maven { url "https://plugins.gradle.org/m2/" } // needed for gradle-errorprone-plugin
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.4.0-alpha7'
-        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+        classpath 'com.android.tools.build:gradle:2.3.2'
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
         classpath "net.ltgt.gradle:gradle-errorprone-plugin:0.0.8"
@@ -20,6 +19,9 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        maven {
+            url "https://maven.google.com"
+        }
     }
 }
 
